# PrivaVoice

./: .gitattributes  .gitignore  PROJECT_HISTORY.txt  README.md  SPEC.md  WHISPER_SETUP.md  pubspec.yaml  texto1.txt
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/pt-br/: dicionario.json  dicionario_reverso.json  frases_basicas.txt  negocios.txt  palavras_comuns.txt  verbos.json
android/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp  whisper_bridge.cpp
android/app/src/main/java/com/whisper/: WhisperContext.kt  WhisperLib.kt
android/app/src/main/kotlin/com/privavoice/privavoice/: LlamaBridge.kt  MainActivity.kt  RecordingMethodChannel.kt  RecordingService.kt  WhisperBridge.kt  WhisperBridge.kt.bak  WhisperBridgeStub.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/llama-android/gradle/: libs.versions.toml
android/llama-android/lib/: build.gradle.kts
android/llama-b8838/: llama-batched-bench  llama-bench  llama-completion  llama-debug-template-parser  llama-fit-params  llama-gguf-split  llama-imatrix  llama-mtmd-cli  llama-mtmd-debug  llama-perplexity  llama-quantize  llama-results  llama-template-analysis  llama-tokenize  llama-tts  rpc-server
assets/pt-br/: dicionario_reverso.json  juridico.txt  localidades.txt  negocios.txt  nomes_proprios.txt
build_native/: CMakeLists.txt
lib/: app.dart  injection_container.dart  main.dart
lib/core/ai/: ai_state.dart  diarization_service.dart
lib/core/ai/llm/: llm_service.dart  system_prompts.dart
lib/core/ai/native/: llama_bindings.dart  whisper_bindings.dart  whisper_platform_service.dart
lib/core/ai/whisper/: whisper_service.dart
lib/core/ai/whisper/bindings/: whisper_bindings.dart
lib/core/constants/: app_constants.dart
lib/core/services/: ai_service.dart  media_importer.dart  permission_service.dart  transcription_service.dart
lib/core/services/recording/: recording_service.dart
lib/core/theme/: app_colors.dart  app_theme.dart
lib/core/utils/: audio_normalizer.dart  encryption_utils.dart  haptic_utils.dart  pdf_exporter.dart
lib/data/datasources/: app_database.dart
lib/data/models/: transcription_model.dart
lib/data/repositories/: transcription_repository_impl.dart
lib/domain/entities/: recording.dart  transcription.dart  user_subscription.dart
lib/domain/repositories/: transcription_repository.dart
lib/presentation/blocs/onboarding/: onboarding_bloc.dart  onboarding_event.dart  onboarding_state.dart
lib/presentation/blocs/recording/: recording_bloc.dart  recording_event.dart  recording_state.dart
lib/presentation/blocs/transcription/: transcription_bloc.dart  transcription_event.dart  transcription_state.dart
lib/presentation/pages/: home_page.dart  library_page.dart  onboarding_page.dart  record_page.dart  settings_page.dart  setup_initial_page.dart  transcription_detail_page.dart  vault_page.dart
lib/presentation/widgets/: speaker_avatar.dart  transcription_card.dart
scripts/: build_native_libs.ps1  build_native_libs.sh  download_models.sh
test/: widget_test.dart
